master: Add minimal Create and Read for Stores
