# docs/api.yaml
@@ -7,12 +7,12 @@ info:
       name: MIT
       url: https://opensource.org/license/mit/
 servers:
-  - url: https://localhost:3000/api
+  - url: http://localhost/api
 tags:
   - name: store
     description: Operations related to stores and their products.
 paths:
-  /store:
+  /stores:
     post:
       tags:
         - store
@@ -47,7 +47,7 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Store'
-  /store/{storeId}:
+  /stores/{storeId}:
     get:
       tags:
         - store
@@ -110,7 +110,7 @@ paths:
       responses:
         "204":
           description: Store deleted successfully, no content returned.
-  /store/{storeId}/product/{productId}/sell:
+  /stores/{storeId}/product/{productId}/sell:
     post:
       tags:
         - store
@@ -168,5 +168,5 @@ components:
         quantity:
           type: integer
           description: Quantity of the product available in the store.
-          example: 42                  
+          example: 42
 
