# routes/web.php
@@ -1,5 +1,9 @@
 <?php
 
+use App\Http\Controllers\StoreController;
 use Illuminate\Support\Facades\Route;
 
+Route::prefix('api')->group(function () {
+    Route::post('/stores', [StoreController::class, 'store'])->name('store');
+    Route::get('/stores', [StoreController::class, 'index'])->name('index');
 });
